--- a/index.html
+++ b/index.html
@@ -7,6 +7,122 @@
     <title>News Homepage</title>
   </head>
   <body>
+
+    <header class="wrapper">
+      <a href="/">
+        <img src="/img/logo.svg" alt="Homepage" width="64" height="40"/>
+      </a>
+      
+      <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">New</a>
+          </li>
+          <li>
+            <a href="">Popular</a>
+          </li>
+          <li>
+            <a href="">Treding</a>
+          </li>
+          <li>
+            <a href="">Categories</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main >
+      <article class="wrapper grid">
+        <section class="feature">
+          <picture>
+            <source
+              media="(min-width: 1024px)"
+              srcset="/img/image-web-3-desktop.jpg 1x,
+                /img/image-web-3-desktop.jpg 2x">
+            <img class="feature__img" src="/img/image-web-3-mobile.jpg" alt="The Oslo Opera House"
+              srcset="/img/image-web-3-mobile.jpg 2x" />
+          </picture>
+          <h1 class="feature__headline">The Bright Future of Web 3.0</h1>
+          <p class="feature__description">We dive into the next evolution of the web that claims to put the
+            power of the platforms back into the hands of the people. But is
+            it really fulfilling its promise?</p>
+            <a class="feture__button" href="">READ MORE</a>
+        </section>
+  
+        <section class="new">
+          <h2>New</h2>
+          <article class="new__post">
+            <h3 class="new__headline">
+              <a href="">
+                Hydrogen VS Electric Cars
+              </a>
+            </h3>
+            <p class="new_description">Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </article>
+
+          <article class="new__post">
+            <h3 class="new__headline">
+              <a href="">
+                The Downsides of AI Artistry
+              </a>
+            </h3>
+            <p class="new_description">What are the possible adverse effects of on-demand AI image
+              generation?</p>
+          </article>
+
+          <article class="new__post">
+            <h3 class="new__headline">
+              <a href="">
+                Is VC Funding Drying Up?
+              </a>
+            </h3>
+            <p class="new_description">Private funding by VC firms is down 50% YOY. We take a look at
+              what that means.</p>
+          </article>
+        </section>
+
+        <section class="blog">
+          <article class="blog__item">
+            <img src="/img/image-retro-pcs.jpg" alt="retro computer, keyboard, cassette tapes on a desk" class="blog__img"/>
+            <div class="blog__number">01</div>
+            <h3 class="blog__headline">
+              <a href="">
+                Reviving Retro PCs
+              </a>
+            </h3>
+            <p class="blog__description">What happens when old PCs are given modern upgrades?</p>
+          </article>
+
+          <article class="blog__item">
+            <img src="/img/image-top-laptops.jpg" alt="keyboard with red backlighting" class="blog__img"/>
+            <div class="blog__number">02</div>
+            <h3 class="blog__headline">
+              <a href="">
+                Top 10 Laptops of 2024
+              </a>
+            </h3>
+            <p class="blog__description">Our best picks for various needs and budgets.</p>
+          </article>
+
+          <article class="blog__item">
+            <img src="/img/image-gaming-growth.jpg" alt="game controller in the air above a hand" class="blog__img"/>
+            <div class="blog__number">03</div>
+            <h3 class="blog__headline">
+              <a href="">
+                The Growth of Gaming
+              </a>
+            </h3>
+            <p class="blog__description">How the pandemic has sparked fresh opportunities.</p>
+          </article>
+        </section>
+
+      </article>
+
+    </main>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
