--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   </head>
   <body>
 
-    <header class="wrapper">
+    <header class="header wrapper">
       <a href="/">
-        <img src="/img/logo.svg" alt="Homepage" width="64" height="40"/>
+        <img class="header__logo" src="/img/logo.svg" alt="Homepage" width="64" height="40"/>
       </a>
       
       <nav>
         <ul>
           <li>
-            <a href="">Home</a>
+            <a class="header__link" href="">Home</a>
           </li>
           <li>
-            <a href="">New</a>
+            <a class="header__link" href="">New</a>
           </li>
           <li>
-            <a href="">Popular</a>
+            <a class="header__link" href="">Popular</a>
           </li>
           <li>
-            <a href="">Treding</a>
+            <a class="header__link" href="">Treding</a>
           </li>
           <li>
-            <a href="">Categories</a>
+            <a class="header__link" href="">Categories</a>
           </li>
         </ul>
       </nav>
