--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <source
               media="(min-width: 1024px)"
               srcset="/img/image-web-3-desktop.jpg 1x,
-                /img/image-web-3-desktop.jpg 2x">
-            <img class="feature__img" src="/img/image-web-3-mobile.jpg" alt="The Oslo Opera House"
+                /img/image-web-3-desktop.jpg 2x" width="730" height="300" >
+            <img class="feature__img" width="343" height="300" src="/img/image-web-3-mobile.jpg" alt="The Oslo Opera House"
               srcset="/img/image-web-3-mobile.jpg 2x" />
           </picture>
           <h1 class="feature__headline">The Bright Future of Web 3.0</h1>
