--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <p class="feature__description">We dive into the next evolution of the web that claims to put the
             power of the platforms back into the hands of the people. But is
             it really fulfilling its promise?</p>
-            <a class="feture__button" href="">READ MORE</a>
+            <a class="feature__button" href="">READ MORE</a>
         </section>
   
         <section class="new">
