new section css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="/public/favicon-32x32.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,33 +56,33 @@
         </section>
   
         <section class="new">
-          <h2>New</h2>
+          <h2 class="new__title">New</h2>
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">
+            <h3>
+              <a class="new__headline" href="">
                 Hydrogen VS Electric Cars
               </a>
             </h3>
-            <p class="new_description">Will hydrogen-fueled cars ever catch up to EVs?</p>
+            <p class="new__description">Will hydrogen-fueled cars ever catch up to EVs?</p>
           </article>
 
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">
+            <h3>
+              <a class="new__headline" href="">
                 The Downsides of AI Artistry
               </a>
             </h3>
-            <p class="new_description">What are the possible adverse effects of on-demand AI image
+            <p class="new__description">What are the possible adverse effects of on-demand AI image
               generation?</p>
           </article>
 
           <article class="new__post">
-            <h3 class="new__headline">
-              <a href="">
+            <h3>
+              <a class="new__headline" href="">
                 Is VC Funding Drying Up?
               </a>
             </h3>
-            <p class="new_description">Private funding by VC firms is down 50% YOY. We take a look at
+            <p class="new__description">Private funding by VC firms is down 50% YOY. We take a look at
               what that means.</p>
           </article>
         </section>
