--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
     <main >
       <article class="wrapper grid">
         <section class="feature">
-          <picture>
+          <picture class="feature__picture">
             <source
-              media="(min-width: 1024px)"
+              media="(min-width: 43.75em)"
               srcset="/img/image-web-3-desktop.jpg 1x,
                 /img/image-web-3-desktop.jpg 2x" width="730" height="300" >
             <img class="feature__img" width="343" height="300" src="/img/image-web-3-mobile.jpg" alt="The Oslo Opera House"
               srcset="/img/image-web-3-mobile.jpg 2x" />
           </picture>
           <h1 class="feature__headline">The Bright Future of Web 3.0</h1>
-          <p class="feature__description">We dive into the next evolution of the web that claims to put the
-            power of the platforms back into the hands of the people. But is
-            it really fulfilling its promise?</p>
-            <a class="feature__button" href="">READ MORE</a>
+          <div class="feature__description">
+            <p>We dive into the next evolution of the web that claims to put the
+              power of the platforms back into the hands of the people. But is
+              it really fulfilling its promise?</p>
+              <a class="feature__button" href="">READ MORE</a>
+          </div>
         </section>
   
         <section class="new">
