--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       
       <nav>
-        <ul>
+        <ul class="header__links">
           <li>
             <a class="header__link" href="">Home</a>
           </li>
